Fix scrollbars

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -101,7 +101,6 @@ section.document li {
     position: fixed;
     top: 0;
     bottom: 0;
-    // padding: 20px 20px 15px;
     z-index: 1000;
     border-right: 1px solid lighten(@trim, 7);
     min-width: @sidebarWidth;
@@ -115,7 +114,6 @@ section.document li {
     bottom: 0;
     right: 0;
     left: 0;
-    // left: ~"calc(100% - 452px)";
     z-index: 1;
     padding-left: 20px;
     padding-top: 20px;
@@ -162,17 +160,21 @@ section.document li {
 }
 
 .page-content {
-    position: relative;
     margin-left: @sidebarWidth + 20px;
     padding: 5px 30px 0;
-    overflow-x: hidden
+    max-width: 1050px;
+    min-width: 772px;
 }
 
 .document {
     // TODO(dcramer): need this to be 100% height
-    // border-right: 1px solid lighten(@trim, 10);
-    max-width: 1400px;
-    min-width: 1050px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     .section {
       margin-top: 30px;
